<resources>
    <string name="app_name">AgendaNam</string>
    <string name="d_connexion">Déconnexion</string>
    <string name="no_connection">Pas de connexion internet</string>
    <string name="inscription">Inscription</string>
    <string name="result">Resultats</string>
    <string name="inscriptionForm">Formulaire d\'inscription</string>
    <string name="e_mail">E-mail</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="connexion">Connexion</string>
    <string name="connectez_vous_l_application">Connectez vous à l\'application</string>
    <string name="categories">Catégories</string>
    <string name="chargement">Chargement</string>
    <string name="todo">TODO</string>
    <string name="recherche">Recherche:</string>
    <string name="pseudo">Pseudo</string>
    <string name="nom">Nom</string>
    <string name="pr_nom">Prénom</string>
    <string name="rue">Rue</string>
    <string name="code_postal">Code postal :</string>
    <string name="localit">Localité :</string>
    <string name="comfirmer_mdp">Comfirmer mdp</string>
    <string name="valid">Validé</string>
    <string name="cin_ma">Cinéma</string>
    <string name="th_tre">Théâtre</string>
    <string name="mus_e">Musée</string>
    <string name="bar">Bar</string>
    <string name="loisir">Loisir</string>
    <string name="ev_nement">Evénement</string>
    <string name="listing">Listing</string>
    <string name="title_activity_menu_draw">MenuDraw</string>

    <!--validation form-->
    <string name="pseudo_error">Le pseudo est requis et doit être de minimum 4 caractères.</string>
    <string name="mdp_error">Le mot de passe est requis et doit être de minimum 3 caractères.</string>
    <string name="name_error">Le nom est requis.</string>
    <string name="firstname_error">Le prénom est requis.</string>
    <string name="email_error">Entrer une adresse Email valide.</string>
    <string name="comfirm_mdp_error">Les deux mots de passe doivent être identiques.</string>
    <string name="account_create">Votre compte a bien été créé</string>

    <!--Affichage event-->
    <string name="presentation">Présentation :</string>
    <string name="description">Description :</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="categoryDefaultName">category name</string>
    <string name="descriptionResultDefault">description event</string>
    <string name="titleResultDefault">default name</string>
    <string name="dateDebutEventDefault">25/03/2014</string>
    <string name="dateEventDefault">25/03/2014</string>
    <string name="adresseEventDefault">Rue Joseph Calozet 15, 5000 Namur</string>
    <string name="numberOfLikeDefault">default likes</string>
    <string name="numberOfParticipantsDefault">default participants</string>
    <string name="defaultComment">default comment</string>
    <string name="like">Nombre de j\'aimes</string>
    <string name="participation">Nombre de participants</string>
    <string name="viewComment">Voir commentaire</string>
    <string name="more_comment">Voir plus</string>
    <string name="searchByDate">Recherche par date</string>
    <string name="myParticipation">Mes participations</string>
    <string name="adresse">Adresse :</string>
    <string name="title_activity_participation_avtivity">ParticipationAvtivity</string>
    <string name="date_picker">Choisissez vos dates</string>
    <string name="start_date">Date de début :</string>
    <string name="end_date">Date de fin :</string>
    <string name="choix">Choix</string>
    <string name="recherche_par_date">Vous êtes sur la recherche par dates</string>
    <string name="par_participation">Vous êtes sur vos participations d\'événements</string>
    <string name="lancer_recherche">Lancer la recherche</string>
    <string name="erreur_date">La date de début doit être antérieure ou égale à la date de fin</string>
    <string name="date_requise">Les dates sont requises</string>
    <string name="write_by">Ecrit par : </string>

    <!--Dialogue ajout commentaire-->
    <string name="enter_comment">Entrer votre commentaire :</string>
    <string name="add_comment">Ajouter commentaire</string>
    <string name="add">Ajouter</string>
    <string name="cancel">Annuler</string>
    <string name="error_add_comment">Entrer quelque chose dans la zone de texte</string>
    <string name="comment_add_success">Commentaire ajouter</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_comment">Commentaires</string>
</resources>
