<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearlayout_event_activity_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondbleufoncer"
    tools:context=".activity.EventActivity">

    <TextView
        android:id="@+id/title_event_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/titleSizeText"
        android:text="@string/titleResultDefault"
        android:textColor="@color/textColorDefault"/>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_event_id"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_margin="@dimen/defaultMargin"
            android:src="@drawable/acinapolis"
            />

        <TextView
            android:id="@+id/begin_date_event_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/defaultSizeText"
            android:layout_below="@id/img_event_id"
            android:text="@string/dateEventDefault"
            android:layout_margin="@dimen/defaultMargin"
            android:textColor="@color/textColorDefault"/>

        <TextView
            android:id="@+id/end_date_event_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_event_id"
            android:layout_alignRight="@id/img_event_id"
            android:text="@string/dateEventDefault"
            android:textSize="@dimen/defaultSizeText"
            android:layout_margin="@dimen/defaultMargin"
            android:textColor="@color/textColorDefault"/>

        <TextView
            android:id="@+id/adresse_event_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/begin_date_event_id"
            android:layout_centerHorizontal="true"
            android:text="@string/adresseEventDefault"
            android:textSize="@dimen/defaultSizeText"
            android:textColor="@color/textColorDefault"
            />

        <TextView
            android:id="@+id/description_event_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/adresse_event_id"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/defaultMargin"
            android:text="@string/descriptionResultDefault"
            android:textSize="@dimen/defaultSizeText"
            android:textAlignment="center"
            android:textColor="@color/textColorDefault"
            />

        <ImageButton
            android:id="@+id/button_like_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/description_event_id"
            android:layout_margin="@dimen/largeMargin"
            android:src="@drawable/like" />

        <TextView
            android:id="@+id/number_of_like_event_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_like_id"
            android:layout_margin="@dimen/defaultMargin"
            android:textSize="@dimen/defaultSizeText"
            android:text="@string/numberOfLikeDefault"
            android:textColor="@color/textColorDefault" />

        <ImageButton
            android:id="@+id/button_participant_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/description_event_id"
            android:layout_alignRight="@+id/description_event_id"
            android:layout_margin="@dimen/largeMargin"
            android:src="@drawable/participant" />

        <TextView
            android:id="@+id/number_of_participants"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_participant_id"
            android:layout_alignRight="@id/description_event_id"
            android:layout_margin="@dimen/defaultMargin"
            android:textSize="@dimen/defaultSizeText"
            android:text="@string/numberOfParticipantsDefault"
            android:textColor="@color/textColorDefault"/>

    </RelativeLayout>
    <ListView
        android:id="@+id/list_comment_event_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"></ListView>

    <TextView
        android:id="@+id/add_comment_event_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/defaultSizeText"
        android:textColor="@color/textColorDefault"
        android:text="@string/addComment"/>

    <EditText
        android:id="@+id/new_comment_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textColor="@color/textColorDefault" />

</LinearLayout>